fix spacing

--- a/_codux/boards/pricing.board.css
+++ b/_codux/boards/pricing.board.css
@@ -56,6 +56,7 @@
     justify-content: center;
     gap: clamp(10px, 2vw, 4px);
     align-items: center;
+    margin-top: 5px;
 }
 .description {
     font-size: 14px;
@@ -96,16 +97,16 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    margin-top: 10px;
 }
 .pricings {
     display: flex;
     flex-direction: row;
 
-
     @media (width <= 768px) {
         display: flex;
         flex-direction: column;
-        gap:20px;
+        gap: 20px;
     }
     @media (width <= 480px) {
         display: flex;
